i18n: Fix message key duplication "coll-notitle_title"
- "coll-notitle_title" had been defined twice in Coll.i18n.php since over 6 years ago.
  One of them dropped on "JSON i18n" conversion (Iafb48504e7110b301919b1958356de6aeabbf2ac).
- Add a full-stop for consistency

Change-Id: I7be7d66205741635c9409556de9d7844b9cf2a17

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,7 +13,7 @@
     "coll-collection": "Book",
     "coll-collections": "Books",
     "coll-unknown_subpage_title": "Unknown subpage",
-    "coll-unknown_subpage_text": "This subpage of [[Special:Book|Book]] does not exist",
+    "coll-unknown_subpage_text": "This subpage of [[Special:Book|Book]] does not exist.",
     "coll-couldnotaddarticle_title": "Could not add wiki page",
     "coll-couldnotaddarticle_msg": "The wiki page could not be added.",
     "coll-couldnotremovearticle_title": "Could not remove wiki page",
@@ -42,7 +42,8 @@
     "coll-new_chapter": "Enter name for new chapter",
     "coll-rename_chapter": "Enter new name for chapter",
     "coll-no_such_category": "No such category",
-    "coll-notitle_title": "The title of the page could not be determined.",
+    "coll-notitle_title": "Could not get page title",
+    "coll-notitle_msg": "The title of the page could not be determined.",
     "coll-request_failed_title": "Book rendering failed",
     "coll-request_failed_msg": "There was an error while attempting to render your book.",
     "coll-mwserve_failed_title": "Render server error",
