Adding new format strings for OCG
Change-Id: I26a8ee3ded2a5fa2f57c59b7ee0a0d857c48ffad

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -120,12 +120,14 @@
     "coll-suggest_undo_tooltip": "Undo this action",
     "coll-suggest_undo": "undo",
     "coll-load_local_book": "Click OK to continue with your book %TITLE% which contains %NUMPAGES% wiki pages. Click Cancel to delete it and start with an empty book.",
-    "coll-format-rl": "e-book (PDF)",
+    "coll-format-rl": "e-book (PDF, mwlib renderer)",
     "coll-format-epub": "e-book (EPUB)",
-    "coll-format-odf": "word processor (OpenDocument)",
+    "coll-format-odf": "Word processor (OpenDocument)",
     "coll-format-zim": "Kiwix (OpenZIM)",
     "coll-format-docbook": "DocBook",
     "coll-format-okawix_zeno": "Okawix",
+    "coll-format-rdf2latex": "e-book (PDF, ocg latex renderer)",
+    "coll-format-rdf2text": "Word processor (plain text)",
     "right-collectionsaveasuserpage": "Save books as user page",
     "right-collectionsaveascommunitypage": "Save books as community page",
     "coll-print_export": "Print/export",
