--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -132,12 +132,14 @@
 	"coll-suggest_undo_tooltip": "{{Identical|Undo}}",
 	"coll-suggest_undo": "{{Identical|Undo}}",
 	"coll-load_local_book": "{{doc-important|Do not translate \"<code>OK</code>\" and \"<code>Cancel</code>\", they are part of a local popup on the client machine which is not localized at the moment.}}\nPLURAL support not yet available for collection extension. See the discussion on [[Thread:Support/PLURAL support for Coll-load local book/reply]].",
-	"coll-format-rl": "Collection extension output format",
+	"coll-format-rl": "Collection extension output format, mwlib PDF output, see [http://mwlib.readthedocs.org/en/latest/]",
 	"coll-format-epub": "Collection extension output format",
 	"coll-format-odf": "Collection extension output format",
 	"coll-format-zim": "Collection extension output format",
 	"coll-format-docbook": "Collection extension output format",
 	"coll-format-okawix_zeno": "Collection extension output format",
+	"coll-format-rdf2latex": "Collection extension output format, OCG PDF output",
+	"coll-format-rdf2text": "Collection extension output format, OCG plain text output",
 	"right-collectionsaveasuserpage": "{{doc-right|collectionsaveasuserpage}}",
 	"right-collectionsaveascommunitypage": "{{doc-right|collectionsaveascommunitypage}}",
 	"coll-print_export": "Caption of a frame in the toolbar (on the left-hand side of the screen), similar to {{msg-mw|toolbox}} or {{msg-mw|otherlanguages}}.\n{{Identical|Print/Export}}",
