--- a/i18n/en.json
+++ b/i18n/en.json
@@ -173,5 +173,9 @@
     "coll-setting-showtoc": "Include a table of contents",
     "coll-setting-columns": "Columns:",
     "coll-setting-columns-1": "1",
-    "coll-setting-columns-2": "2"
+    "coll-setting-columns-2": "2",
+	"coll-attribution-anons": "Anonymous: $1",
+	"coll-attribution-page": "<h1>Text and image sources, contributors, and licenses</h1>\n<h2>Text</h2>\n$1<h2>Images</h2>\n$2\n<h2>Content license</h2>\n$3",
+	"coll-article-attribution": "<b>$1</b> <i>Source:</i> $2 <i>Contributors:</i> $3",
+	"coll-image-attribution": "<b>$1</b> <i>Source:</i> $2 <i>License:</i> $3 <i>Contributors:</i> $4 <i>Original artist:</i> $5"
 }
