Fix syntax error
Follow up Ifd80ca8c9b4f44100506fd52daa98093f88f0b5e

Change-Id: I7e64bdba91b9439822cbebabb68a7a0e5f8d9056

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -185,7 +185,7 @@
 	"coll-setting-showtoc": "Label for the \"include a table of contents\" checkbox.\n\nPreceded by {{msg-mw|Coll-setting-papersize}}.\n\nFollowed by {{msg-mw|Coll-setting-columns}}.",
 	"coll-setting-columns": "Label for the \"number of columns\" option.\n\nSee also:\n* {{msg-mw|Coll-setting-columns-1}}\n* {{msg-mw|Coll-setting-columns-2}}",
 	"coll-setting-columns-1": "{{optional}}\n\nSee also:\n* {{msg-mw|Coll-setting-columns}}\n* {{msg-mw|Coll-setting-columns-2}}",
-	"coll-setting-columns-2": "{{optional}}\n\nSee also:\n* {{msg-mw|Coll-setting-columns}}\n* {{msg-mw|Coll-setting-columns-1}}"
+	"coll-setting-columns-2": "{{optional}}\n\nSee also:\n* {{msg-mw|Coll-setting-columns}}\n* {{msg-mw|Coll-setting-columns-1}}",
 	"coll-attribution-anons": "Text to add to a list of contributors to an article when there have been anonymous contributions. $1 is the number of anonymous contributions.",
 	"coll-attribution-page": "Prototype for a page that will be added to all books for attribution purposes. $1 will be a list of articles and their contributors, $2 will be a list of all images and their contributors, $3 will be the wiki's license text.",
 	"coll-article-attribution": "An individal list item for ''coll-attribution-page''; will document an article. $1 is the article name, $2 is a URL to the article, $3 is the list of contributors to an article.",
