Fix is cached template and rerender handling
Previously you would get an ugly unformatted and unclickable rerender
link if a document was cached. This now gives a formated and clickable
link. Also, we no longer fatal when we submit the rerender.

Change-Id: Ibc187acc0d95b6c10dd63e462e93df15ada3e8fe

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -91,7 +91,7 @@
     "coll-download_notfound_text": "The file you are trying to download does not exist:\nMaybe it has been deleted and needs to be regenerated.",
     "coll-download_failed_title": "Error during download",
     "coll-download_failed_text": "There was an error when downloading the file: $1",
-    "coll-is_cached": "<ul><li>A cached version of the document has been found, so no rendering was necessary.\n<a href=\"$1\">Force re-rendering.</a></li></ul>",
+    "coll-is_cached": "<ul><li>A cached version of the document has been found, so no rendering was necessary. [$1 Force re-rendering].</li></ul>",
     "coll-excluded-templates": "* Templates in category [[:Category:$1|$1]] have been excluded.",
     "coll-blacklisted-templates": "* Templates on blacklist [[:$1]] have been excluded.",
     "coll-book_title": "Order as a printed book",
