Conform settings to metabook.json spec
 * Renames showtoc to toc

 * Sets the default columns to 2

 * Adds auto as an option for the toc

 * Fixes handling checkboxes in js

 * Puts the settings directly on the metabook object

Bug: 68836
Change-Id: I2e0941925284d32756118d01043f5215ddd51401

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -170,7 +170,10 @@
     "coll-setting-papersize": "Paper size:",
     "coll-setting-papersize-a4": "A4",
     "coll-setting-papersize-letter": "Letter",
-    "coll-setting-showtoc": "Include a table of contents",
+    "coll-setting-toc": "Include a table of contents",
+    "coll-setting-toc-auto": "Auto",
+    "coll-setting-toc-yes": "Yes",
+    "coll-setting-toc-no": "No",
     "coll-setting-columns": "Columns:",
     "coll-setting-columns-1": "1",
     "coll-setting-columns-2": "2",
