--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -182,9 +182,12 @@
 	"coll-user_book_prefix": "{{notranslate}}",
 	"coll-community_book_prefix": "{{notranslate}}",
 	"coll-setting-papersize": "Label for the \"paper size\" option.\n\nSee also:\n* {{msg-mw|Coll-setting-papersize-a4}}\n* {{msg-mw|Coll-setting-papersize-letter}}\n{{Identical|Paper size}}",
-	"coll-setting-papersize-a4": "{{optional}} Name for the A4 paper size\nSee also:\n* {{msg-mw|Coll-setting-papersize}}\n* {{msg-mw|Coll-setting-papersize-letter}}",
+	"coll-setting-papersize-a4": "{{optional}} Name for the A4 paper size\n\nSee also:\n* {{msg-mw|Coll-setting-papersize}}\n* {{msg-mw|Coll-setting-papersize-letter}}",
 	"coll-setting-papersize-letter": "Name for the US Letter paper size\n\nSee also:\n* {{msg-mw|Coll-setting-papersize}}\n* {{msg-mw|Coll-setting-papersize-a4}}\n{{Identical|Letter}}",
-	"coll-setting-showtoc": "Label for the \"include a table of contents\" checkbox.\n\nPreceded by {{msg-mw|Coll-setting-papersize}}.\n\nFollowed by {{msg-mw|Coll-setting-columns}}.",
+	"coll-setting-toc": "Label for the \"include a table of contents\" option.\n\nPreceded by {{msg-mw|Coll-setting-papersize}}.\n\nFollowed by {{msg-mw|Coll-setting-columns}}.",
+	"coll-setting-toc-auto": "Used to let the backend service decide automatically if a table of contents should be added.\n\nSee also:\n* {{msg-mw|Coll-setting-toc}}",
+	"coll-setting-toc-yes": "Used to indicate a table of contents is desired.\n\nSee also:\n* {{msg-mw|Coll-setting-toc}}\n{Identical|Yes}}",
+	"coll-setting-toc-no": "Used to indicate a table of contents is not desired.\n\nSee also:\n* {{msg-mw|Coll-setting-toc}}\n{Identical|No}}",
 	"coll-setting-columns": "Label for the \"number of columns\" option.\n\nSee also:\n* {{msg-mw|Coll-setting-columns-1}}\n* {{msg-mw|Coll-setting-columns-2}}\n{{Identical|Column}}",
 	"coll-setting-columns-1": "{{optional}}\n\nSee also:\n* {{msg-mw|Coll-setting-columns}}\n* {{msg-mw|Coll-setting-columns-2}}",
 	"coll-setting-columns-2": "{{optional}}\n\nSee also:\n* {{msg-mw|Coll-setting-columns}}\n* {{msg-mw|Coll-setting-columns-1}}",
