--- a/i18n/en.json
+++ b/i18n/en.json
@@ -119,7 +119,7 @@
     "coll-suggest_article_remove": "Page <strong>$1</strong> has been removed from your book ($2).",
     "coll-suggest_undo_tooltip": "Undo this action",
     "coll-suggest_undo": "undo",
-    "coll-load_local_book": "Click OK to continue with your book %TITLE% which contains %NUMPAGES% wiki pages. Click Cancel to delete it and start with an empty book.",
+    "coll-load_local_book": "Click OK to continue with your book $1 which contains $2 wiki pages. Click Cancel to delete it and start with an empty book.",
     "coll-format-rl": "e-book (PDF, mwlib renderer)",
     "coll-format-epub": "e-book (EPUB)",
     "coll-format-odf": "Word processor (OpenDocument)",
