--- a/i18n/en.json
+++ b/i18n/en.json
@@ -137,8 +137,8 @@
 	"coll-disable": "disable",
 	"coll-book_creator_disable": "Disable book creator",
 	"coll-book_creator_disable_tooltip": "Stop using the book creator",
-	"coll-add_linked_article": "Add linked wiki page to your book",
-	"coll-remove_linked_article": "Remove linked wiki page from your book",
+	"coll-add_linked_article": "Add the linked wiki page to your book",
+	"coll-remove_linked_article": "Remove the linked wiki page from your book",
 	"coll-add_category": "Add this category to your book",
 	"coll-add_category_tooltip": "Add all wiki pages in this category to your book",
 	"coll-add_this_page": "Add this page to your book",
