--- a/i18n/en.json
+++ b/i18n/en.json
@@ -75,7 +75,9 @@
 	"coll-rendering_page_info_text_article": "{{MediaWiki:Coll-helppage}}/Rendering page info text",
 	"coll-rendering_collection_info_text_article": "{{MediaWiki:Coll-helppage}}/Rendering collection info text",
 	"coll-rendering_finished_title": "Rendering finished",
-	"coll-rendering_finished_text": "<strong>The document file has been generated.</strong>\n<strong>[$1 Download the file]</strong> to your computer.\n\nNotes:\n* Not satisfied with the output? See [[{{MediaWiki:Coll-helppage}}|the help page about books]] for possibilities to improve it.",
+	"coll-rendering_finished_text": "<strong>The document file has been generated.</strong>\n<strong>[$1 Download the file]</strong> to your computer.",
+	"coll-rendering_finished_notes_heading": "Notes:",
+	"coll-rendering_finished_note_not_satisfied": "Not satisfied with the output? See [[{{MediaWiki:Coll-helppage}}|the help page about books]] for possibilities to improve it.",
 	"coll-finished_page_info_text_article": "{{MediaWiki:Coll-helppage}}/Rendering page info text",
 	"coll-finished_collection_info_text_article": "{{MediaWiki:Coll-helppage}}/Rendering collection info text",
 	"coll-rendering_failed_title": "Rendering failed",
