Optionally include extra notes after rendering
Extra messages can be added to the render page.
Default message can also be removed.

This patch also introduced the message with key:
"coll-rendering_finished_note_article_rdf2latex"
that can be used if deemed appropriate.

Bug: T135613
Change-Id: Iaa7a9355cd2eadfde9b3b2b87f306cfc7862bafc

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -78,6 +78,7 @@
 	"coll-rendering_finished_text": "<strong>The document file has been generated.</strong>\n<strong>[$1 Download the file]</strong> to your computer.",
 	"coll-rendering_finished_notes_heading": "Notes:",
 	"coll-rendering_finished_note_not_satisfied": "Not satisfied with the output? See [[{{MediaWiki:Coll-helppage}}|the help page about books]] for possibilities to improve it.",
+	"coll-rendering_finished_note_article_rdf2latex": "Currently some documents do not contain tables. An alternative may be to use the $1, select \"Print\" in the browser menu, and use the \"Save as PDF\" option.",
 	"coll-finished_page_info_text_article": "{{MediaWiki:Coll-helppage}}/Rendering page info text",
 	"coll-finished_collection_info_text_article": "{{MediaWiki:Coll-helppage}}/Rendering collection info text",
 	"coll-rendering_failed_title": "Rendering failed",
