--- a/i18n/en.json
+++ b/i18n/en.json
@@ -181,5 +181,8 @@
 	"coll-attribution-anons": "Anonymous: $1",
 	"coll-attribution-page": "<h1>Text and image sources, contributors, and licenses</h1>\n<h2>Text</h2>\n$1<h2>Images</h2>\n$2\n<h2>Content license</h2>\n$3",
 	"coll-article-attribution": "<b>$1</b> <i>Source:</i> $2 <i>Contributors:</i> $3",
-	"coll-image-attribution": "<b>$1</b> <i>Source:</i> $2 <i>License:</i> $3 <i>Contributors:</i> $4 <i>Original artist:</i> $5"
+	"coll-image-attribution": "<b>$1</b> <i>Source:</i> $2 <i>License:</i> $3 <i>Contributors:</i> $4 <i>Original artist:</i> $5",
+	"coll-warning-text": "We're having significant problems with the function we currently use to create PDFs. We unfortunately have to replace it. This might affect the styling and feature set of Books. We would like to invite you to a conversation around the functionality necessary in the proposed replacement. For feedback, please visit the project page here: https://www.mediawiki.org/wiki/Reading/Web/PDF_Functionality",
+	"coll-warning-leave-feedback": "Leave feedback",
+	"coll-warning-read-more": "Read more"
 }
