--- a/i18n/en.json
+++ b/i18n/en.json
@@ -182,9 +182,11 @@
 	"coll-attribution-page": "<h1>Text and image sources, contributors, and licenses</h1>\n<h2>Text</h2>\n$1<h2>Images</h2>\n$2\n<h2>Content license</h2>\n$3",
 	"coll-article-attribution": "<b>$1</b> <i>Source:</i> $2 <i>Contributors:</i> $3",
 	"coll-image-attribution": "<b>$1</b> <i>Source:</i> $2 <i>License:</i> $3 <i>Contributors:</i> $4 <i>Original artist:</i> $5",
-	"coll-warning-text": "We're having significant problems with the function we currently use to create PDFs. We unfortunately have to replace it. This might affect the styling and feature set of Books. We would like to invite you to a conversation around the functionality necessary in the proposed replacement. For feedback, please visit the project page here: https://www.mediawiki.org/wiki/Reading/Web/PDF_Functionality",
-	"coll-warning-leave-feedback": "Leave feedback",
-	"coll-warning-read-more": "Read more",
+	"coll-warning-disable-pdf-title": "Book Creator is undergoing changes",
+	"coll-warning-disable-pdf-text": "Due to severe issues with our existing system, the Book Creator will no longer support saving a book as a PDF for a short period of time. We are working hard to replace our system and re-enable PDFs within the Book Creator.",
+	"coll-warning-learn-more": "Learn more",
+	"coll-notice-download-pdf-title" : "Download single pages",
+	"coll-notice-download-pdf-text": "While the Book Creator PDF rendering is being replaced, you can try '''''Download as PDF''''' from the sidebar tools for individual articles.",
 	"coll-toc-title": "Table of Contents",
 	"coll-contributors-title": "Contributors",
 	"coll-rendererror-title": "Could not generate the book",
