--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -209,9 +209,11 @@
 	"coll-attribution-page": "Prototype for a page that will be added to all books for attribution purposes. $1 will be a list of articles and their contributors, $2 will be a list of all images and their contributors, $3 will be the wiki's license text.",
 	"coll-article-attribution": "An individual list item for {{msg-mw|coll-attribution-page|notext=notext}}; will document an article.\n* $1 is the article name,\n* $2 is an URL to the article,\n* $3 is the list of contributors to an article.",
 	"coll-image-attribution": "An individal list item for ''coll-attribution-page''; will document an image. $1 is the image name, $2 is an URL to the image, $3 is the image license, $4 is the credit field for an image, $5 is the author (not necessarily the same as the uploader).",
-	"coll-warning-text": "Warning text about the new PDF functionality change.",
-	"coll-warning-leave-feedback": "Text of the link that points to the new PDF functionality feedback page.",
-	"coll-warning-read-more": "Text of the link that points to new PDF functionality page.\n{{Identical|Read more}}",
+	"coll-warning-disable-pdf-title": "Warning text about Book Creator undergoing changes",
+	"coll-warning-disable-pdf-text": "Text describing why Book Creator is undergoing changes",
+	"coll-warning-learn-more": "Text of the link 'Learn more' that points to new PDF funcionalit page {{Identical|Learn more}}",
+	"coll-notice-download-pdf-title" : "Notice text about possibility to download single pages as PDFs",
+	"coll-notice-download-pdf-text": "Text describing how to download article as PDF while Book Creator PDF feature is unavailable",
 	"coll-toc-title": "Text shown on top of PDF table of contents",
 	"coll-contributors-title": "Text shown on top of PDF contributors section",
 	"coll-rendererror-title": "Error page title for book rendering errors.",
