Add a missing line break in en.json
Change-Id: I85841bb61f2b52ecec324a5abe51c855192a0dea

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -198,6 +198,6 @@
 	"coll-rendererror-no-session": "Book definition not found in session. It might have been discarded due to inactivity.",
 	"coll-rendererror-pdf": "PDF rendering failed: $1",
 	"coll-rendererror-fetch": "Fetching $1 failed: $2",
-	"coll-rendererror-fetch-wrapper": "There were errors while trying to fetch page contents:$1",
+	"coll-rendererror-fetch-wrapper": "There were errors while trying to fetch page contents:\n$1",
 	"coll-rendererror-no-cache": "Book data not found in cache. This is most likely an error in the software."
 }
