Add images section
Concatenated book HTML now has the images section.

Bug: T175856
Change-Id: I7ef0444c474a904a2610c3960ac8524bacad67dd

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -189,6 +189,10 @@
 	"coll-notice-download-pdf-text": "While the Book Creator PDF rendering is being replaced, you can try '''''Download as PDF''''' from the sidebar tools for individual articles.",
 	"coll-toc-title": "Table of Contents",
 	"coll-contributors-title": "Contributors",
+	"coll-images-title": "Images",
+	"coll-images-source": "Source",
+	"coll-images-license": "License",
+	"coll-images-original-artist": "Original artist",
 	"coll-rendererror-title": "Could not generate the book",
 	"coll-rendererror-no-session": "Book definition not found in session. It might have been discarded due to inactivity.",
 	"coll-rendererror-pdf": "PDF rendering failed: $1",
