--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -216,6 +216,10 @@
 	"coll-notice-download-pdf-text": "Text describing how to download article as PDF while Book Creator PDF feature is unavailable",
 	"coll-toc-title": "Text shown on top of PDF table of contents",
 	"coll-contributors-title": "Text shown on top of PDF contributors section",
+	"coll-images-title": "Text shown on top of PDF images section",
+	"coll-images-source": "Label for the source of each image in the images section",
+	"coll-images-license": "Label for the license of each image in the images section",
+	"coll-images-original-artist": "Label for the original artist of each image in the images section",
 	"coll-rendererror-title": "Error page title for book rendering errors.",
 	"coll-rendererror-no-session": "Error shown when trying to render a book but there is no collection stored in the session.",
 	"coll-rendererror-pdf": "Error shown when the Electron request to render the book into PDF failed. Parameters:\n* $1 - error message",
