Add license info
Concatenated HTML has the license section now.

Change-Id: I759c3492d3bdaba67917db9ffe6685b9a5c32293

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -193,6 +193,7 @@
 	"coll-images-source": "Source",
 	"coll-images-license": "License",
 	"coll-images-original-artist": "Original artist",
+	"coll-license-title": "Content License",
 	"coll-rendererror-title": "Could not generate the book",
 	"coll-rendererror-no-session": "Book definition not found in session. It might have been discarded due to inactivity.",
 	"coll-rendererror-pdf": "PDF rendering failed: $1",
