Add missing action- messages
Change-Id: Idfa6ddfa8f6bba34cf19baa232ab8fec06023f4f

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -129,7 +129,9 @@
 	"coll-format-okawix_zeno": "Okawix",
 	"coll-format-rdf2latex": "e-book (PDF, ocg latex renderer)",
 	"coll-format-rdf2text": "Word processor (plain text)",
+	"action-collectionsaveasuserpage": "save books as user page",
 	"right-collectionsaveasuserpage": "Save books as user page",
+	"action-collectionsaveascommunitypage": "save books as community page",
 	"right-collectionsaveascommunitypage": "Save books as community page",
 	"coll-print_export": "Print/export",
 	"coll-create_a_book": "Create a book",
