--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -157,7 +157,9 @@
 	"coll-format-okawix_zeno": "Collection extension output format",
 	"coll-format-rdf2latex": "Collection extension output format, OCG PDF output",
 	"coll-format-rdf2text": "Collection extension output format, OCG plain text output",
+	"action-collectionsaveasuserpage": "{{doc-action|collectionsaveasuserpage}}",
 	"right-collectionsaveasuserpage": "{{doc-right|collectionsaveasuserpage}}",
+	"action-collectionsaveascommunitypage": "{{doc-action|collectionsaveascommunitypage}}",
 	"right-collectionsaveascommunitypage": "{{doc-right|collectionsaveascommunitypage}}",
 	"coll-print_export": "Caption of a frame in the toolbar (on the left-hand side of the screen), similar to {{msg-mw|toolbox}} or {{msg-mw|otherlanguages}}.\n{{Identical|Print/Export}}",
 	"coll-create_a_book": "Used as link text.\n\nThe link points to the \"Book creator\" page.\n{{Identical|Books}}",
