Clarify messages. Book Creator PDF rendering died
Per https://www.mediawiki.org/wiki/Reading/Web/PDF_Functionality#Update_on_PDF_rendering,_July_15_2019

"In terms of books, we've left it in the hands of volunteer developers and PediaPress.
We'll be glad to reach out to them with questions, but we're not planning any involvement
in terms of the technical implementation."

Change-Id: I170483d18947464ef6f82c9eb6ea9d6666b8c713

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -185,10 +185,10 @@
 	"coll-article-attribution": "<b>$1</b> <i>Source:</i> $2 <i>Contributors:</i> $3",
 	"coll-image-attribution": "<b>$1</b> <i>Source:</i> $2 <i>License:</i> $3 <i>Contributors:</i> $4 <i>Original artist:</i> $5",
 	"coll-warning-disable-pdf-title": "Book Creator is undergoing changes",
-	"coll-warning-disable-pdf-text": "Due to severe issues with our existing system, the Book Creator will no longer support saving a book as a PDF for a short period of time. We are working hard to replace our system and re-enable PDFs within the Book Creator.",
+	"coll-warning-disable-pdf-text": "Due to severe issues with our existing system, the Book Creator will no longer support saving a book as a PDF.",
 	"coll-warning-learn-more": "Learn more",
 	"coll-notice-download-pdf-title" : "Download single pages",
-	"coll-notice-download-pdf-text": "While the Book Creator PDF rendering is being replaced, you can try '''''Download as PDF''''' from the sidebar tools for individual articles.",
+	"coll-notice-download-pdf-text": "While the Book Creator PDF rendering is disabled, you can try '''''Download as PDF''''' from the sidebar tools for individual articles.",
 	"coll-toc-title": "Table of Contents",
 	"coll-contributors-title": "Contributors",
 	"coll-images-title": "Images",
