Revert "Localisation updates from https://translatewiki.net."
This reverts commit 1a5d334511a59e1ecdac0089ff4746c4eb66f34a.

Reason for revert: Broken export

Change-Id: I9e05f4a6e31f6c6c9e55a8843299f45f96c1697d

--- a/i18n/gu.json
+++ b/i18n/gu.json
@@ -1,11 +1,13 @@
 {
 	"@metadata": {
 		"authors": [
+			"Arbhatt",
 			"Ashok modhvadia",
 			"Dsvyas",
 			"KartikMistry",
 			"Macofe",
-			"NehalDaveND"
+			"NehalDaveND",
+			"Sushant savla"
 		]
 	},
 	"coll-desc": "[[ખાસ:પુસ્તક|પુસ્તક બનાવો]]",
