--- a/i18n/id.json
+++ b/i18n/id.json
@@ -5,14 +5,17 @@
 			"Ahdan",
 			"Bennylin",
 			"C5st4wr6ch",
+			"Diki Ananta",
 			"Farras",
 			"Irwangatot",
 			"IvanLanin",
 			"Iwan Novirion",
 			"Kenrick95",
+			"Rachmat.Wahidi",
 			"Rachmat04",
 			"Rex",
-			"Sumbukompor"
+			"Sumbukompor",
+			"Totosunarto"
 		]
 	},
 	"coll-desc": "[[Special:Book|Buat buku]]",
