--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -31,5 +31,7 @@
 	"apihelp-collection-sortitems-example": "Sort collection articles alphabetically",
 	"apihelp-collection-sortitems-summary": "Api module to sort articles in collection alphabetically. Articles within chapters are grouped and sorted together",
 	"apihelp-collection-getpopupdata-example": "Gets a popup to add/remove an article to the collection",
-	"apihelp-collection-getpopupdata-summary": "Api module to get data and html to construct a popup"
+	"apihelp-collection-getpopupdata-summary": "Api module to get data and html to construct a popup",
+	"apihelp-collection-removeitem-example": "Remove an item from the collection provided an index or index 0 by default.",
+	"apihelp-collection-removeitem-summary": "Api module for removing an item from the collection index-wise via the Special:Book page."
 }
