--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -23,5 +23,9 @@
 	"apihelp-collection-renamechapter-example": "Rename a chapter in the user's collection.",
 	"apihelp-collection-renamechapter-summary": "Api module for renaming a chapter in the user's collection",
 	"apihelp-collection-clear-example": "Clears collection and suggestions",
-	"apihelp-collection-clear-summary": "Api module for clearing the collection and suggestions"
+	"apihelp-collection-clear-summary": "Api module for clearing the collection and suggestions",
+	"apihelp-collection-setsorting-example": "In a collection of 3 items, Swap the first and second item",
+	"apihelp-collection-setsorting-deletion-example": "In a collection of 3 items, make the 3rd item first and delete the 2nd item",
+	"apihelp-collection-setsorting-summary": "Api module for reordering items in a collection",
+	"apihelp-collection-setsorting-param-items": "Items should be listed using their old index and ordered by their new position"
 }
