--- a/i18n/api/qqq.json
+++ b/i18n/api/qqq.json
@@ -7,15 +7,17 @@
 	"apihelp-collection-list-example": "{{doc-apihelp-example|collection-list}}",
 	"apihelp-collection-list-summary": "{{doc-apihelp-summary|collection-list}}",
 	"apihelp-collection-addarticle-example": "{{doc-apihelp-example|collection-addarticle}}",
-	"apihelp-collection-addarticle-summary": "{{doc-apihelp-summary|collection-addarticle}}",
+	"apihelp-collection-addarticle-summary": "{{doc-apihelp-example|collection-addarticle}}",
 	"apihelp-collection-settitles-example": "{{doc-apihelp-example|collection-settitles}}",
 	"apihelp-collection-settitles-settings-example": "{{doc-apihelp-example|collection-settitles}}",
 	"apihelp-collection-settitles-summary": "{{doc-apihelp-summary|collection-settitles}}",
-	"coll-api-addarticle-article-not-added": "Text shown when an article was not successfully added to the user's collection. It could most likely be due to the fact that the title is not in the specified namespace in the API request or that th article could have already been added to the collection in a previous request.",
 	"apihelp-collection-removearticle-example": "{{doc-apihelp-example|collection-removearticle}}",
 	"apihelp-collection-removearticle-summary": "{{doc-apihelp-summary|collection-removearticle}}",
 	"coll-api-removearticle-article-not-removed": "Text shown when an article was not successfully removed from the user's collection. It could most likely be due to the fact that the title is not in the specified namespace in the API request or that the article does not exist in the user's collection.",
 	"apihelp-collection-addcategory-example": "{{doc-apihelp-example|collection-addcategory}}",
 	"apihelp-collection-addcategory-summary": "{{doc-apihelp-summary|collection-addcategory}}",
-	"coll-api-addcategory-category-does-not-exist": "The text shown when a user tries to add articles from a category that does not exist, is invalid or that exceeds the limit of articles to be in a category specified with $wgCollectionMaxArticles."
+	"coll-api-addcategory-category-does-not-exist": "The text shown when a user tries to add articles from a category that does not exist, is invalid or that exceeds the limit of articles to be in a category specified with $wgCollectionMaxArticles.",
+	"apihelp-collection-addchapter-example": "{{doc-apihelp-example|collection-addchapter}}",
+	"apihelp-collection-addchapter-summary": "{{doc-apihelp-summary|collection-addchapter}}",
+	"coll-api-addarticle-article-not-added": "Text shown when an article was not successfully added to the user's collection. It could most likely be due to the fact that the title is not in the specified namespace in the API request or that th article could have already been added to the collection in a previous request."
 }
