Introduce api action modules to replace onAjaxCollectionSuggest*
Replacing
* onAjaxCollectionSuggestAddArticle
* onAjaxCollectionSuggestRemoveArticle
* onAjaxCollectionSuggestBanArticle
* onAjaxCollectionSuggestUndoArticle

Bug: T291398
Change-Id: Ie4d719222dbc78f06ede82a49490be82ee788879

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -17,6 +17,12 @@
 	"coll-api-removearticle-article-not-removed": "Article was not remove from collection. Make sure the title is in the specified namespace or check if the article does not exist in the collection.",
 	"apihelp-collection+addcategory-example": "Add articles from a given category to a user's collection.",
 	"apihelp-collection+addcategory-summary": "Api module for adding articles from a giving category to a user's collection.",
+	"apihelp-collection+suggestarticleaction-example": "Adds an article to the collection and suggestions",
+	"apihelp-collection+suggestarticleaction-summary": "Api module to interact with suggestions",
+	"apihelp-collection+suggestarticleaction-param-suggestaction": "One of 'add', 'remove', or 'ban'. 'add' adds an article to the collection and suggestions and unbans it. 'remove' removes an added article and bans it. 'ban' bans an article from suggestions",
+	"apihelp-collection+suggestundoarticleaction-example": "Undos an added article action",
+	"apihelp-collection+suggestundoarticleaction-summary": "Api module to undo actions done from suggestarticleaction",
+	"apihelp-collection+suggestundoarticleaction-param-lastaction": "One of 'add', 'remove', or 'ban'.",
 	"coll-api-addcategory-category-does-not-exist": "The category you are trying to add articles from does not exist, is invalid or has articles more than the limit specified.",
 	"apihelp-collection+addchapter-example": "Add a chapter to the collection.",
 	"apihelp-collection+addchapter-summary": "Api module for adding a chapter to the collection",
