API: Introduce `action=collection&submodule=postcollection`
This enables users to post something to the collection without
using the UI for it. This is strictly an API-like posting to the
user's collection directly.

Bug: T291399
Change-Id: I982ae7bf9b7d40702a4856fa9e96d4a6383c0f28

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -37,5 +37,8 @@
 	"apihelp-collection-param-submodule": "Submodule for performing various operations on a wiki user's collection.",
 	"apihelp-collection-summary": "Api module for performing various operations on a wiki user's collection.",
 	"apihelp-collection+getbookcreatorboxcontent-example": "Get book creator box content of the user's collection.",
-	"apihelp-collection+getbookcreatorboxcontent-summary": "Api submodule for grabbing the box content of the user's book creator box special page."
+	"apihelp-collection+getbookcreatorboxcontent-summary": "Api submodule for grabbing the box content of the user's book creator box special page.",
+	"apihelp-collection+postcollection-example": "Post articles to a user's collection",
+	"apihelp-collection+postcollection-summary": "Api module for posting articles to a user's collection",
+	"coll-api-invalid-collection": "Invalid collection received."
 }
