Introduce api action module to replace onAjaxCollectionClear
Bug: T291398
Change-Id: Ic92a201aa1db0ef595d7acafebe09e239a400022

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -21,5 +21,7 @@
 	"apihelp-collection-addchapter-example": "Add a chapter to the collection.",
 	"apihelp-collection-addchapter-summary": "Api module for adding a chapter to the collection",
 	"apihelp-collection-renamechapter-example": "Rename a chapter in the user's collection.",
-	"apihelp-collection-renamechapter-summary": "Api module for renaming a chapter in the user's collection"
+	"apihelp-collection-renamechapter-summary": "Api module for renaming a chapter in the user's collection",
+	"apihelp-collection-clear-example": "Clears collection and suggestions",
+	"apihelp-collection-clear-summary": "Api module for clearing the collection and suggestions"
 }
